@@ -1,6 +1,8 @@
 version 0.9x
+============
 - added bookmark storage XEP-0048
 - added message receipts XEP-0184
+- added XEP-0047: In-Band Bytestreams (IBB)
 
 version 0.95
 ============
